k8s/accessories-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accessories-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: accessories
  template:
    metadata:
      labels:
        app: accessories
    spec:
      containers:
        - name: accessories
          image: <ECR_REPO_URI>:latest
          ports:
            - containerPort: 80
