k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: google-shopping-deploy
  labels:
    app: google-shopping
spec:
  replicas: 2
  selector:
    matchLabels:
      app: google-shopping
  template:
    metadata:
      labels:
        app: google-shopping
    spec:
      containers:
        - name: google-shopping
          image: <ECR_IMAGE_URI> # will be replaced automatically by CI
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
