k8s/offers-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: offers-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: offers
  template:
    metadata:
      labels:
        app: offers
    spec:
      containers:
        - name: offers
          image: <IMAGE_URI>
          ports:
            - containerPort: 80
