k8s/phones-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phones-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: phones
  template:
    metadata:
      labels:
        app: phones
    spec:
      containers:
        - name: phones
          image: <IMAGE_URI>
          ports:
            - containerPort: 80
