k8s/earbuds-service.yml
apiVersion: v1
kind: Service
metadata:
  name: earbuds-service
spec:
  selector:
    app: earbuds
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
