k8s/offers-service.yml
apiVersion: v1
kind: Service
metadata:
  name: offers-service
spec:
  selector:
    app: offers
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
