k8s/phones-service.yml
apiVersion: v1
kind: Service
metadata:
  name: phones-service
spec:
  selector:
    app: phones
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
