k8s/watches-service.yml
apiVersion: v1
kind: Service
metadata:
  name: watches-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: watches
  ports:
    - port: 80
      targetPort: 80
